--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
   <string name="submit">Submit</string>
   <string name="cancel">Cancel</string>
   <string name="credit_card_number_hint">Credit card number</string>
+    <string name="or">or</string>
+  <string name="ship">Ship</string>
+  <string name="product_image">product image</string>
 </resources>
