--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="or">or</string>
   <string name="ship">Ship</string>
   <string name="product_image">product image</string>
+  <string name="add_to_list">Add to List</string>
+  <string name="add_to_cart">Add to Cart</string>
 </resources>
