--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,6 @@
 <resources>
   <string name="app_name">TargetCaseStudy</string>
 
-  <!-- TODO: Remove or change this placeholder text -->
-  <string name="hello_blank_fragment">Hello blank fragment</string>
-
   <!-- Credit card validation strings. You do not need to make changes here. -->
   <string name="credit_card_payment_title">Credit Card Payment</string>
   <string name="credit_card_payment_subtitle">Note: you do NOT need to enter real data</string>
@@ -17,4 +14,6 @@
   <string name="add_to_cart">add to cart</string>
   <string name="no_internet_text">No Internet Connection</string>
   <string name="reg">Reg:</string>
+    <string name="DEAL">Deal</string>
+  <string name="valid_message">Entered credit card number is valid</string>
 </resources>
